updated sales/expense transaction account table ui

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2630,3 +2630,21 @@ table td{
   font-size:14px !important;
   padding:5px;
 }
+#invoice_table>tr>td, #InvoiceAccountTBody>tr>td, #estimate_table_tbody>tr>td, #credit_note_table_tbody>tr>td, #credit_note_accounts_table>tr>td, #sales_receipt_table_tbody>tr>td, #bill_account_table_tbody>tr>td, #tableexpensebill_credit_account_table_body>tr>td, #sc_account_table_tbody>tr>td, #supplier_credit_debit_account_table_body>tr>td{
+  padding:0px;
+  
+}
+
+#invoice_table>tr>td>select{
+  border:0;
+}
+#credit_note_accounts_table>tr>td>select{
+  border:0;
+}
+table.dt-rowReorder-float{position:absolute !important;opacity:0.8;table-layout:fixed;outline:2px solid #888;outline-offset:-2px;z-index:2001}
+tr.dt-rowReorder-moving{outline:2px solid #555;outline-offset:-2px}
+body.dt-rowReorder-noOverflow{overflow-x:hidden}
+table.dataTable td.reorder{text-align:center;cursor:move}
+table.DTCR_clonedTable.dataTable{position:absolute !important;background-color:rgba(255,255,255,0.7);
+  z-index:202}
+div.DTCR_pointer{width:1px;background-color:#0259C4;z-index:201}
